--- a/contrib/sendmail/src/sendmail.8
+++ b/contrib/sendmail/src/sendmail.8
@@ -729,13 +729,13 @@ collected statistics
  /var/spool/mqueue/*
 temp files
 .SH SEE ALSO
-binmail(1),
 mail(1),
-rmail(1),
 syslog(3),
 aliases(5),
 mailaddr(7),
-rc(8)
+mail.local(8),
+rc(8),
+rmail(8)
 .PP
 DARPA 
 Internet Request For Comments
@@ -753,3 +753,4 @@ The
 .B sendmail
 command appeared in
 4.2BSD.
+.\" $FreeBSD$
