--- a/crypto/openssh/INSTALL
+++ b/crypto/openssh/INSTALL
@@ -207,6 +207,9 @@ it if lastlog is installed in a different place.
 --with-osfsia, --without-osfsia will enable or disable OSF1's Security
 Integration Architecture.  The default for OSF1 machines is enable.
 
+--with-tcp-wrappers will enable TCP Wrappers (/etc/hosts.allow|deny)
+support.
+
 --with-utmpx enables utmpx support. utmpx support is automatic for
 some platforms.
 
