--- a/crypto/openssh/ssh_config.5
+++ b/crypto/openssh/ssh_config.5
@@ -1992,7 +1992,7 @@ in
 Specifies a string to append to the regular version string to identify
 OS- or site-specific modifications.
 The default is
-.Dq FreeBSD-20211221 .
+.Dq MidnightBSD-20230627 .
 The value
 .Cm none
 may be used to disable this.
