--- a/man/vi.1
+++ b/man/vi.1
@@ -12,7 +12,7 @@
 .\" that you would have purchased it, or if any company wishes to
 .\" redistribute it, contributions to the authors would be appreciated.
 .\"
-.Dd September 25, 2020
+.Dd November 2, 2013
 .Dt VI 1
 .Os
 .Sh NAME
@@ -2282,6 +2282,10 @@ and
 .Nm vi
 modes, unless otherwise specified.
 .Bl -tag -width Ds
+.It Cm altnotation Bq off
+Display control characters less than 0x20 in <C-char> notations.
+Carriage feed, escape, and delete are marked as <Enter>, <Esc>, and <Del>,
+respectively.
 .It Cm altwerase Bq off
 .Nm vi
 only.
