Add support for 4 com ports to bhyve.
Obtained from: FreeBSD,
https://cgit.freebsd.org/src/patch/?id=eed1cc6cdfa743e52ac3ea0b788e95b069a5f2f3

--- a/usr.sbin/bhyve/bhyve.8
+++ b/usr.sbin/bhyve/bhyve.8
@@ -185,8 +185,8 @@ Print a list of supported LPC devices.
 Allow devices behind the LPC PCI-ISA bridge to be configured.
 The only supported devices are the TTY-class devices
 .Ar com1
-and
-.Ar com2 ,
+through
+.Ar com4 ,
 the boot ROM device
 .Cm bootrom ,
 and the debug/test device
